tests/fixtures/compile_errors/numeric_capacity_mismatch/i32_neg.fe
contract Foo:
    pub def bar() -> i32:
        return i32(-2147483649)